[gd_scene load_steps=2 format=3 uid="uid://bfst63v06st3b"]

[ext_resource type="Script" path="res://Characters/Player/Inventory/Scripts/tooltip.gd" id="1_q7ccm"]

[node name="Tooltip" type="Panel"]
custom_minimum_size = Vector2(150, 150)
offset_right = 152.0
offset_bottom = 219.0
mouse_filter = 2
script = ExtResource("1_q7ccm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Item Name"

[node name="CategoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Category"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "Item description goes here with multiple lines of text explaining what the item does."
autowrap_mode = 3
